# sam_globus_keepup

./: .gitignore  README.md  pyproject.toml
demo/: demo_globus.py  demo_mon.py
src/sam_globus_keepup/: __init__.py  const.py  globus.py  ifdhmanager.py  mon.py  sam.py  sam_derived.py  utils.py
tests/: test_const.py  test_mon.py  test_sam.py  test_utils.py
tools/: check_eagle.sh  check_sam.sh  sam_copy.sh  setup_samweb.sh
tools/sam_declare/: README.md  sam_declare.py
